* restructured Replayer interface